--- a/web-app/styles/globals.css
+++ b/web-app/styles/globals.css
@@ -21,10 +21,9 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    /* color-scheme: dark; */
+    color-scheme: dark;
   }
   body {
-    /* color: white; */
-    /* background: black; */
+    background: black;
   }
 }
