--- a/web-app/styles/globals.css
+++ b/web-app/styles/globals.css
@@ -27,3 +27,24 @@ a {
     background: black;
   }
 }
+
+.glow {
+  font-size: 120px;
+  text-align: center;
+  color: white;
+  animation: glow 8s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #6400e6, 0 0 60px #0032e6, 0 0 70px #008ee6;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #4deaff, 0 0 40px #4dff8e, 0 0 50px #4dff65, 0 0 60px #a3ff4d, 0 0 70px #fff04d, 0 0 80px #fff64d;
+  }
+}
+
+.font-code {
+  font-family: "Lucida Console", "Courier New", monospace;
+}
