--- a/web-app/styles/globals.css
+++ b/web-app/styles/globals.css
@@ -22,6 +22,7 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    background: black;
   }
   body {
     background: black;
