--- a/web-app/styles/globals.css
+++ b/web-app/styles/globals.css
@@ -68,3 +68,8 @@ a {
       opacity: 1;
   }
 }
+
+.h-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
