Update certificate, signatures, colors

--- a/certification-api/templates/certificates/certificate_base.html
+++ b/certification-api/templates/certificates/certificate_base.html
@@ -48,7 +48,7 @@
 		font-family: 'IBM Plex Sans', sans-serif;
 		text-transform: uppercase;
 		font-size: 2.6em;
-		color: #06c;
+		color: #5630DF;
 	}
 	h3 {
 		font-family: 'IBM Plex Sans', sans-serif;
@@ -169,9 +169,9 @@
 				<table style="width:100%; table-layout: fixed;">
 					<tr class="underline-signature" style="text-align-last: left;">
 						<th><img
-								src="#{CDN_URL}/img/signature/signature_Ian_Tolan.png" style="width: 4cm;" /><br><span></span></th>
+								src="#{CDN_URL}/img/signature/signature_hamze_zamkan.png" style="width: 4cm;" /><br><span></span></th>
 						<th><img src="#{CDN_URL}/img/signature/signature_David_Podolskyi.png" style="width: 4cm;" /><br><span></span></th>
-						<th><img src="#{CDN_URL}/img/signature/signature_Alex_Pokras.png" style="width: 4cm;" /><br><span></span></th>
+						<th><img src="#{CDN_URL}/img/signature/signature_mariia_bogatyreva.png" style="width: 4cm;" /><br><span></span></th>
 					</tr>
 					<tr style="">
 						<td style="width: 4.5cm!important;"><b>#{SIGNER_TITLE1}</b></td>
@@ -179,9 +179,14 @@
 						<td><b>#{SIGNER_TITLE3}</b></td>
 					</tr>
 					<tr style="">
-						<td style="width: 4.5cm!important;">#{SIGNER_INFO1}</td>
-						<td>#{SIGNER_INFO2}</td>
-						<td>#{SIGNER_INFO3}</td>
+						<td style="width: 4.5cm!important;">#{SIGNER_INFO}</td>
+						<td>#{SIGNER_INFO}</td>
+						<td>#{SIGNER_INFO}</td>
+					</tr>
+					<tr style="">
+						<td style="width: 4.5cm!important;">#{SIGNED_ON}</td>
+						<td>#{SIGNED_ON}</td>
+						<td>#{SIGNED_ON}</td>
 					</tr>
 				</table>
 				<br>
