--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -97,3 +97,8 @@ a {
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
 }
+
+/* RADIXUI */
+
+/* Dialog */
+/*  */
